2008-12-03  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add magic for 7z archive files
	* tests/archive.7z:
	* tests/list: Add test case for the above

2008-11-13  Pino Toscano  <pino@kde.org>

	* freedesktop.org.xml.in: add definiton for the Microsoft Document
	Imaging format IANA MIME type, image/vnd.ms-modi.
	* tests/list:
	* tests/bluerect.mdi: Add a test MDI file, kindly provided by
	Brad Hards.

2008-11-03  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: add application/x-zip alias
	for application/zip, for compatibility with KDE 3.

2008-10-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: make PICTURES match a picture CD,
	not "Pictures", or "pictures"

2008-10-17  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add missing IANA-registered mimetype
	application/vnd.oasis.opendocument.chart-template
	and correct the use of <acronym> in all oasis mimetypes, which
	is meant to explain an acronym used in <comment>, not the extension.

	* freedesktop.org.xml.in: Add missing IANA-registered mimetype
	application/vnd.oasis.opendocument.formula-template

	* freedesktop.org.xml.in: Add missing IANA-registered mimetype
	text/vnd.graphviz, with globs, magic and test (Closes: #15363)

2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix RDF mime-type, spotted by
	Sebastian Trüg <trueg@kde.org> (Closes: #18088)

2008-10-12  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Fix building when srcdir != builddir,
	patch by Yevgeniy <YLitvinenko@astana.oilfield.slb.com>
	(Closes: #18026)

2008-09-10  Bastien Nocera  <hadess@hadess.net>

	* tests/tree-list: Add another test for video DVDs

2008-09-10  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info-spec.xml: Clarify some statements to
	include "of the same weight" when talking about comparisons,
	patch from David Faure <dfaure@trolltech.com>

2008-08-27  Bastien Nocera  <hadess@hadess.net>
