@@ -150,6 +150,7 @@ hello.pack application/x-java-pack200
 test.msi application/x-msi
 # Created using 7z
 archive.7z application/x-7z-compressed
+comics.cb7 application/x-cb7 ox
 
 # Audio/Video files
 # Copied from /usr/share/sounds/generic.wav
