@@ -1,3 +1,10 @@
+2008-12-19  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add cb7 files, Comic book archive
+	created with 7z (Closes: #18887)
+	* tests/comics.cb7:
+	* tests/list: Add a test for cb7 files
+
 2008-12-03  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add magic for 7z archive files
